--- a/sass/_wiki.scss
+++ b/sass/_wiki.scss
@@ -82,15 +82,8 @@
 		h3 {
 			margin-bottom: 20px;
 		}
-		ul {
-			list-style: none;
-			margin: 0 0 15px 0;
-		}
 		a {
 			text-decoration: none;
-		}
-		.wiki-docs a {
-			font-weight:normal;
 		}
 	}
 		
@@ -98,6 +91,7 @@
 
 .wiki-docs {
 	list-style: none;
+	margin:0 0 18px 18px;
 	li,
 	li:active {
 		background-image: url(images/wiki-doc.svg);
@@ -107,6 +101,7 @@
 		padding-left: 25px;
 		a {
 			background: none;
+			font-weight: normal;
 			text-decoration: none;
 		}
 	}
@@ -114,6 +109,7 @@
 
 .wiki-subcats {
 	list-style: none;
+	margin:0 0 18px 18px;
 	li {
 		background-image: url(images/wiki-folder.svg);
 		background-position: left 5px;
